feat: почистили репозиторий, обновили документацию
